<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccentTrans"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="48dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/img_signup"
        android:paddingBottom="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_user" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#FFF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emai_signup"
            android:inputType="textEmailAddress"
            android:textColor="#FFFFFF" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColorHint="#FFF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_signiup"
            android:inputType="textPassword"
            android:textColor="#FFFFFF" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColorHint="#FFF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="#FFFFFF" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColorHint="#FFF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_number"
            android:inputType="phone"
            android:textColor="#FFFFFF" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:text="@string/btn_signup"
        android:textColor="#FFF"
        android:textSize="30sp" />

</LinearLayout>