<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryTrans"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="48dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/img_signin"
        android:paddingBottom="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_login" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#FFF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_Signin"
            android:textColor="#FFFFFF" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColorHint="#FFF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_signin"
            android:inputType="textPassword"
            android:textColor="#FFFFFF" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:text="@string/btn_signin"
        android:textColor="#FFF"
        android:textSize="30sp" />

</LinearLayout>