<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.project.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="583dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:contentDescription="@string/ciu_logo"
        android:scaleType="centerCrop"
        android:src="@drawable/logo" />

    <androidx.percentlayout.widget.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlackTrans"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llSignin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="@color/colorPrimaryTrans"
            android:orientation="horizontal"
            app:layout_widthPercent="85%"
            android:layout_alignParentStart="true">

            <TextView
                android:id="@+id/textSignin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|center_horizontal|center_vertical"
                android:paddingTop="15dp"
                android:rotation="-90"
                android:text="@string/signin"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:visibility="gone" />

            <include
                android:id="@+id/llSigninContent"
                layout="@layout/layout_signin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"></include>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSignup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@color/colorAccentTrans"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_widthPercent="15%"
            android:layout_alignParentEnd="true">

            <TextView
                android:id="@+id/txtSignup"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingTop="15dp"
                android:rotation="90"
                android:singleLine="false"
                android:text="@string/signup"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:visibility="visible" />

            <include
                android:id="@+id/llSignupContent"
                layout="@layout/layout_signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|center_horizontal|center_vertical"></include>
        </LinearLayout>
    </androidx.percentlayout.widget.PercentRelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="30dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/cyprus_international_university"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uluslararas_k_br_s_niversitesi"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>
